--- a/config_sample.env
+++ b/config_sample.env
@@ -1,15 +1,13 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 
 # REQUIRED CONFIG
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-BOT_TOKEN = ""
+OWNER_ID = "1101776571"
+TELEGRAM_API = "7028372"
+TELEGRAM_HASH = "10bc5c7771a121c180ab8859ab438bb8"
+BOT_TOKEN = "6579788504:AAFS_11w1Cl3dKT3d8DIU8Ws5Ia1Tivbmy8"
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/Nani0778/Z-Mirror/"
+UPSTREAM_BRANCH = "upstream"
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
@@ -58,7 +56,7 @@ USER_DUMP = ""
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "300"
-BASE_URL = ""
+BASE_URL = "https://nanileechbottrailnani.herokuapp.com/"
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
