--- a/config_sample.env
+++ b/config_sample.env
@@ -1,9 +1,9 @@
 
 # REQUIRED CONFIG
-OWNER_ID = "1101776571"
+OWNER_ID = "5499921298"
 TELEGRAM_API = "7028372"
 TELEGRAM_HASH = "10bc5c7771a121c180ab8859ab438bb8"
-BOT_TOKEN = "6579788504:AAFS_11w1Cl3dKT3d8DIU8Ws5Ia1Tivbmy8"
+BOT_TOKEN = "6278550185:AAF4u3qoZ8x6lDuGEvjRqNby4ZFfriViTns"
 
 # Update
 UPSTREAM_REPO = "https://github.com/Nani0778/Z-Mirror/"
@@ -56,7 +56,7 @@ USER_DUMP = ""
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "300"
-BASE_URL = "https://nanileechbottrailnani.herokuapp.com/"
+BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
